--- a/app/salesgoods/sales/templates/sales/product_detail.html
+++ b/app/salesgoods/sales/templates/sales/product_detail.html
@@ -8,7 +8,7 @@
     <div class="bgProduct"></div>
     <div class="productWrapper">
         <div class="blockProduct blockProductImg">
-            <img src="{{ product.image }}"></img>
+            <img src="https://borwood.by/upload/cacheResize/da3/bb3/558edfa6f569bca5a601c7ab2c54e26b.jpg"></img>
         </div>
         <div class="blockProduct blockProductContent">
             <div class="categoryProductBody">
