--- a/app/salesgoods/sales/templates/sales/includes/product_card_template.html
+++ b/app/salesgoods/sales/templates/sales/includes/product_card_template.html
@@ -1,6 +1,6 @@
 <div class="categoryProductBlock">
     <img class="categoryProductImg"
-         src={{ product.image }}></img>
+         src="https://borwood.by/upload/cacheResize/da3/bb3/558edfa6f569bca5a601c7ab2c54e26b.jpg"></img>
     <div class="categoryProductBody">
         <div class="categoryProduct-Title"><a href="{{ product.get_absolute_url }}">{{ product.title }}</a></div>
         <div class="categoryProduct-Desc">
