--- a/app/salesgoods/static/css/styles.css
+++ b/app/salesgoods/static/css/styles.css
@@ -640,30 +640,39 @@ body {
 
 
 
-
-admin-panel-container{
-	position: fixed;
-	top: 0;
-	right: 0;
-	height: 100vh;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
-	z-index: 1000;
-}
-
 .admin-panel{
-    border: 2px solid #ccc;
-	border-bottom-left-radius: 8px;
-    border-top-left-radius: 8px;
-	border-right-color: #fff;
-	background: #fff;
-    opacity: .5;
+    border: 1px solid #999;
+    border-radius: 2px;
+    position: fixed;
+    right: 50px;
+    bottom: 30px;
+    opacity: 0.3;
     padding: 15px;
+	z-index: 100;
 }
+/*admin-panel-container{*/
+/*	position: fixed;*/
+/*	top: 0;*/
+/*	right: 0;*/
+/*	height: 100vh;*/
+/*	display: -webkit-box;*/
+/*	display: -ms-flexbox;*/
+/*	display: flex;*/
+/*	-webkit-box-align: center;*/
+/*	    -ms-flex-align: center;*/
+/*	        align-items: center;*/
+/*	z-index: 1000;*/
+/*}*/
+
+/*.admin-panel{*/
+/*    border: 2px solid #ccc;*/
+/*	border-bottom-left-radius: 8px;*/
+/*    border-top-left-radius: 8px;*/
+/*	border-right-color: #fff;*/
+/*	background: #fff;*/
+/*    opacity: .5;*/
+/*    padding: 15px;*/
+/*}*/
 
 .admin-panel:hover {
     opacity: 1;
